--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
+/* Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
+}
+
 body, h1, h2, p {
     margin: 0;
     padding: 0;
 }
 
 body {
-    font-family: Arial, sans-serif;
     background-color: #f5f5f5;
     min-height: 100vh;
 }
@@ -54,6 +66,16 @@ section {
     margin-left: 20px;
 }
 
+.project-links {
+    margin-top: 20px;
+}
+
+.project-links i {
+    font-size: 20px;
+    margin-right: 20px;
+    color: #333;
+}
+
 .tags {
     margin-top: auto;
     margin-bottom: 5px;
@@ -82,14 +104,16 @@ main {
     margin-bottom: 20px;
 }
 
-/* Add CSS for circular profile picture */
 .profile-img {
-    border-radius: 50%;
-    /* Makes the image round */
-    width: 150px;
-    /* Adjust the width and height as needed */
-    height: 150px;
-    
+    width: 300px;
+    height: 200px;
+}
+
+.profile-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
 }
 
 /* Style for profile information */
@@ -102,6 +126,11 @@ main {
 .profile-info {
     margin-left: 20px;
     /* Adjust the spacing between image and text */
+}
+
+.profile-info span {
+    color: #01a29c;
+    font-weight: 600;
 }
 
 /* Style for contact icons */
@@ -118,22 +147,39 @@ main {
     margin-top: 20px;
 }
 
-/* Style for social icons */
+.info-box {
+    display: flex;
+    align-items: center;
+    margin: 1rem 0;
+}
+
+.info-box i {
+    font-size: 20px;
+}
+
+.info-box p {
+    margin-left: 1rem;
+    font-weight: 400;
+}
+
+
 .social-links {
     margin-top: 10px;
 }
 
-.social-icon {
-    width: 30px;
-    /* Adjust the size of the icons */
-    height: 30px;
-    margin-right: 10px;
-    /* Adjust the spacing between icons */
+.social-links i {
+    font-size: 20px;
+    margin-right: 20px;
+    color: #333;
 }
 
 /* Style for skills section */
-#skills {
-    margin-top: 20px;
+.skills {
+    margin-top: 10px;
+}
+
+.skills h2{
+    margin-bottom: 10px;
 }
 
 /* Style for each skill */
